--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -4,7 +4,7 @@
     <view class="decorative-line"></view>
     <view class="title">
       <text class="title-line">婚礼邀请函</text>
-      <text class="names">周期律 ♥ 王若纯</text>
+      
     </view>
     <view class="decorative-line"></view>
   </view>
@@ -30,13 +30,34 @@
       <view class="info-section">
         <view class="hearts">♥ ♥ ♥</view>
         <text class="date font-fancy">2025.05.25 星期日</text>
-        <view class="hearts">♥ ♥ ♥</view>
+        <view class="countdown">
+          <text class="countdown-title">距离婚礼还有</text>
+          <view class="countdown-numbers">
+            <view class="countdown-item">
+              <text class="number">{{days}}</text>
+              <text class="label">天</text>
+            </view>
+            <view class="countdown-item">
+              <text class="number">{{hours}}</text>
+              <text class="label">时</text>
+            </view>
+            <view class="countdown-item">
+              <text class="number">{{minutes}}</text>
+              <text class="label">分</text>
+            </view>
+            <view class="countdown-item">
+              <text class="number">{{seconds}}</text>
+              <text class="label">秒</text>
+            </view>
+          </view>
+        </view>
+
         <image class="banner" src="/images/tirtha_overview_snip.jpg" mode="widthFix"></image>
         <text class="location">Tirtha Bali 水之教堂</text>       
         <image class="banner" src="/images/vivara_snip.jpg" mode="widthFix"></image>        
         <text class="location">Vivara 私人泳池别墅及水疗度假村</text>
       </view>
-
+      
       <view class="image-background" style="background-image: url('/images/people1_snip.jpg');">
         <view class="overlay">
             <text class="section-title">日程安排</text>
@@ -45,7 +66,7 @@
             <text class="section-content"> 入住Vivara酒店 享用晚餐或自由活动</text>
             <text class="section-date "> 05/25 </text>
             <text class="section-content "> ♥ Vivara享用早餐 ♥</text>
-            <text class="section-content align-left"> 10:00 - 出发前往仪式地点</text>
+            <text class="section-content align-left"> 09:30 - 出发前往仪式地点</text>
             <text class="section-content align-left"> 11:00 - 教堂仪式 @Tirtha Bali </text>
             <text class="section-content align-left"> 12:30 - 午餐 @Melasti沙滩</text>
             <text class="section-content"> ♥ 午餐后自由活动 ♥</text>
